--- a/packages/form-to-sheet/package.json
+++ b/packages/form-to-sheet/package.json
@@ -12,7 +12,9 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "glob": "^10.2.3",
     "jmespath": "^0.16.0",
+    "minimist": "^1.2.8",
     "xlsx": "https://cdn.sheetjs.com/xlsx-0.19.3/xlsx-0.19.3.tgz"
   }
 }
