--- a/packages/forgma.io/tsconfig.json
+++ b/packages/forgma.io/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "@create-figma-plugin/tsconfig",
   "compilerOptions": {
     "target":"ES2022",
+    "resolveJsonModule": true,
     "typeRoots": ["node_modules/@figma", "node_modules/@types"]
   },
   "include": ["src/**/*.ts", "src/**/*.tsx"]
