Refactor getFormioJSON.ts into multiple files
Export component processors as a name and function.
Add @ alias to src/.

--- a/packages/forgma.io/tsconfig.json
+++ b/packages/forgma.io/tsconfig.json
@@ -3,7 +3,10 @@
   "compilerOptions": {
     "target":"ES2022",
     "resolveJsonModule": true,
-    "typeRoots": ["node_modules/@figma", "node_modules/@types"]
+    "typeRoots": ["node_modules/@figma", "node_modules/@types"],
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   },
   "include": ["src/**/*.ts", "src/**/*.tsx"]
 }
