Remove UI from plugin
Move code from dump.ts to main.ts.
Auto-increment IDs created by camelCase().

--- a/packages/forgma.io/package.json
+++ b/packages/forgma.io/package.json
@@ -16,14 +16,7 @@
     ],
     "id": "forgma.io",
     "name": "Forgma.io",
-    "main": "src/main.ts",
-    "ui": "src/ui.tsx",
-    "menu": [
-      {
-        "name": "Dump",
-        "main": "src/dump.ts"
-      }
-    ]
+    "main": "src/main.ts"
   },
   "dependencies": {
     "@create-figma-plugin/ui": "^2.4.0",
