--- a/packages/screendoor-scraper/package.json
+++ b/packages/screendoor-scraper/package.json
@@ -18,13 +18,15 @@
     "dotenv": "^16.3.1",
     "fast-csv": "^4.3.6",
     "fs-extra": "^11.1.1",
-    "minimist": "^1.2.8"
+    "minimist": "^1.2.8",
+    "turndown": "^7.1.2"
   },
   "devDependencies": {
     "@apify/tsconfig": "^0.1.0",
     "@types/fs-extra": "^11.0.1",
     "@types/minimist": "^1.2.2",
     "@types/node": "^18.0.0",
+    "@types/turndown": "^5.0.1",
     "ts-node": "^10.8.0",
     "typescript": "^5.0.0"
   }
