--- a/packages/lottery-results/package.json
+++ b/packages/lottery-results/package.json
@@ -8,12 +8,18 @@
   "type": "module",
   "main": "src/index.js",
   "scripts": {
-    "start": "node src/convert-raw.js"
+    "start": "node src/convert-raw.js",
+    "dev": "vite src",
+    "build": "vite build src --outDir=../dist",
+    "preview": "vite preview src --outDir=../dist"
   },
   "dependencies": {
     "glob": "^10.2.3",
     "jmespath": "^0.16.0",
     "minimist": "^1.2.8",
     "xlsx": "https://cdn.sheetjs.com/xlsx-0.19.3/xlsx-0.19.3.tgz"
+  },
+  "devDependencies": {
+    "vite": "^5.0.12"
   }
 }
