--- a/packages/forble/package.json
+++ b/packages/forble/package.json
@@ -6,6 +6,7 @@
   "license": "UNLICENSED",
   "scripts": {
     "dev": "block run",
+    "release": "block release",
     "ci": "cd ../../packages/sdk && yarn build && cd - && yarn test",
     "cypress": "cypress run",
     "lint": "eslint frontend test cypress",
