--- a/packages/forml/package.json
+++ b/packages/forml/package.json
@@ -1,15 +1,30 @@
 {
   "name": "forml",
-  "version": "1.0.0",
+  "private": true,
+  "version": "0.0.0",
   "author": "John Dunning",
   "license": "ISC",
   "description": "",
   "type": "module",
   "main": "src/index.js",
   "scripts": {
-    "parse": "node src/index.js"
+    "parse": "node src/index.js",
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview"
   },
   "dependencies": {
+    "@formio/js": "^5.0.0-rc.39",
+    "@formio/react": "^5.3.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "yaml": "^2.4.1"
+  },
+  "devDependencies": {
+    "@modyfi/vite-plugin-yaml": "^1.1.0",
+    "@types/react": "^18.2.64",
+    "@types/react-dom": "^18.2.21",
+    "@vitejs/plugin-react": "^4.2.1",
+    "vite": "^5.1.6"
   }
 }
