--- a/packages/forml/package.json
+++ b/packages/forml/package.json
@@ -8,7 +8,6 @@
   "type": "module",
   "main": "src/index.js",
   "scripts": {
-    "parse": "node src/index.js",
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview"
@@ -17,8 +16,7 @@
     "@formio/js": "^5.0.0-rc.39",
     "@formio/react": "^5.3.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "yaml": "^2.4.1"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@modyfi/vite-plugin-yaml": "^1.1.0",
