--- a/packages/forml/src/form.yaml
+++ b/packages/forml/src/form.yaml
@@ -1,15 +1,42 @@
-title: Forml Test
+title: Housing Application
 name: formlTest
 type: form
 display: wizard
 components:
   - type: panel
-    title: This is a panel
+    title: You
     components:
       - type: textfield
-        label: Input some stuff
-        validate:
-          required: true
+        label: First Name
+        required: true
+
+      - type: textfield
+        label: Middle Name (optional)
+
+      - type: textfield
+        label: Last Name
+        required: true
+
+      - type: email
+        label: Your Email Address
+        required: true
+        logic:
+          - trigger:
+              type: simple
+              simple:
+                show: true
+                when: noEmail
+                eq: true
+            actions:
+              - type: property
+                property:
+                  value: disabled
+                  type: boolean
+                state: true
+
+      - type: checkbox
+        key: noEmail
+        label: I don't have an email address
 
       - type: selectboxes
         label: Select something
@@ -20,8 +47,6 @@ components:
             value: 2
           - label: Option 3
             value: 3
-        validate:
-          required: true
 
   - type: panel
     title: Another panel
