--- a/packages/forml/form.yaml
+++ b/packages/forml/form.yaml
@@ -34,6 +34,10 @@ components:
             label: Last Name
             required: true
 
+      - type: day
+        label: Your Date of Birth
+        required: true
+
       - tag: hr
 
       - type: email
@@ -65,6 +69,10 @@ components:
   - type: panel
     title: Contact
     components:
+      - tag: h3
+        content:
+          Thanks, {{data.firstName}}. Now we need to know how to contact you.
+
       - type: fieldSet
         logic: *disabledOnNoPhone
         components:
@@ -128,124 +136,138 @@ components:
 
           - type: textfield
             label: Street Address
+            required: true
 
           - type: textfield
             label: "Apt or Unit #"
 
           - type: textfield
             label: City
+            required: true
 
-          - type: select
-            label: State
-            widget: choicesjs
-            searchEnabled: true
-            data:
-              values:
-                - label: Alabama
-                  value: AL
-                - label: Alaska
-                  value: AK
-                - label: Arizona
-                  value: AZ
-                - label: Arkansas
-                  value: AR
-                - label: California
-                  value: CA
-                - label: Colorado
-                  value: CO
-                - label: Connecticut
-                  value: CT
-                - label: Delaware
-                  value: DE
-                - label: Florida
-                  value: FL
-                - label: Georgia
-                  value: GA
-                - label: Hawaii
-                  value: HI
-                - label: Idaho
-                  value: ID
-                - label: Illinois
-                  value: IL
-                - label: Indiana
-                  value: IN
-                - label: Iowa
-                  value: IA
-                - label: Kansas
-                  value: KS
-                - label: Kentucky
-                  value: KY
-                - label: Louisiana
-                  value: LA
-                - label: Maine
-                  value: ME
-                - label: Maryland
-                  value: MD
-                - label: Massachusetts
-                  value: MA
-                - label: Michigan
-                  value: MI
-                - label: Minnesota
-                  value: MN
-                - label: Mississippi
-                  value: MS
-                - label: Missouri
-                  value: MO
-                - label: Montana
-                  value: MT
-                - label: Nebraska
-                  value: NE
-                - label: Nevada
-                  value: NV
-                - label: New Hampshire
-                  value: NH
-                - label: New Jersey
-                  value: NJ
-                - label: New Mexico
-                  value: NM
-                - label: New York
-                  value: NY
-                - label: North Carolina
-                  value: NC
-                - label: North Dakota
-                  value: ND
-                - label: Ohio
-                  value: OH
-                - label: Oklahoma
-                  value: OK
-                - label: Oregon
-                  value: OR
-                - label: Pennsylvania
-                  value: PA
-                - label: Rhode Island
-                  value: RI
-                - label: South Carolina
-                  value: SC
-                - label: South Dakota
-                  value: SD
-                - label: Tennessee
-                  value: TN
-                - label: Texas
-                  value: TX
-                - label: Utah
-                  value: UT
-                - label: Vermont
-                  value: VT
-                - label: Virginia
-                  value: VA
-                - label: Washington
-                  value: WA
-                - label: West Virginia
-                  value: WV
-                - label: Wisconsin
-                  value: WI
-                - label: Wyoming
-                  value: WY
+          - type: columns
+            columns:
+              - components:
+                - type: select
+                  label: State
+                  required: true
+                  widget: choicesjs
+                  searchEnabled: true
+                  data:
+                    values:
+                      - label: Alabama
+                        value: AL
+                      - label: Alaska
+                        value: AK
+                      - label: Arizona
+                        value: AZ
+                      - label: Arkansas
+                        value: AR
+                      - label: California
+                        value: CA
+                      - label: Colorado
+                        value: CO
+                      - label: Connecticut
+                        value: CT
+                      - label: Delaware
+                        value: DE
+                      - label: Florida
+                        value: FL
+                      - label: Georgia
+                        value: GA
+                      - label: Hawaii
+                        value: HI
+                      - label: Idaho
+                        value: ID
+                      - label: Illinois
+                        value: IL
+                      - label: Indiana
+                        value: IN
+                      - label: Iowa
+                        value: IA
+                      - label: Kansas
+                        value: KS
+                      - label: Kentucky
+                        value: KY
+                      - label: Louisiana
+                        value: LA
+                      - label: Maine
+                        value: ME
+                      - label: Maryland
+                        value: MD
+                      - label: Massachusetts
+                        value: MA
+                      - label: Michigan
+                        value: MI
+                      - label: Minnesota
+                        value: MN
+                      - label: Mississippi
+                        value: MS
+                      - label: Missouri
+                        value: MO
+                      - label: Montana
+                        value: MT
+                      - label: Nebraska
+                        value: NE
+                      - label: Nevada
+                        value: NV
+                      - label: New Hampshire
+                        value: NH
+                      - label: New Jersey
+                        value: NJ
+                      - label: New Mexico
+                        value: NM
+                      - label: New York
+                        value: NY
+                      - label: North Carolina
+                        value: NC
+                      - label: North Dakota
+                        value: ND
+                      - label: Ohio
+                        value: OH
+                      - label: Oklahoma
+                        value: OK
+                      - label: Oregon
+                        value: OR
+                      - label: Pennsylvania
+                        value: PA
+                      - label: Rhode Island
+                        value: RI
+                      - label: South Carolina
+                        value: SC
+                      - label: South Dakota
+                        value: SD
+                      - label: Tennessee
+                        value: TN
+                      - label: Texas
+                        value: TX
+                      - label: Utah
+                        value: UT
+                      - label: Vermont
+                        value: VT
+                      - label: Virginia
+                        value: VA
+                      - label: Washington
+                        value: WA
+                      - label: West Virginia
+                        value: WV
+                      - label: Wisconsin
+                        value: WI
+                      - label: Wyoming
+                        value: WY
+
+              - components:
+                - type: textfield
+                  label: Zip Code
+                  required: true
 
       - tag: hr
 
       - type: radio
         label: Do you work in San Francisco?
+        required: true
+        validate:
+          customMessage: This must be answered.
         description:
           This means you currently work in San Francisco at least 75% of your
           working hours.
