Add support for showing the desc above a radio group
Use one .desc-above class to handle both cases.

--- a/packages/forml/form.yaml
+++ b/packages/forml/form.yaml
@@ -149,7 +149,7 @@ components:
         label: Your Email Address*
         description:
           We will only use your email address to contact you about your application.
-        customClass: email-desc-above
+        customClass: desc-above
         logic:
           - trigger:
               type: simple
@@ -331,6 +331,7 @@ components:
         description:
           This means you currently work in San Francisco at least 75% of your
           working hours.
+        customClass: desc-above
         values:
           - label: Yes
             value: true
